--- a/gin-vue-admin-main/web/package.json
+++ b/gin-vue-admin-main/web/package.json
@@ -23,6 +23,7 @@
     "element-plus": "^2.3.8",
     "highlight.js": "^11.8.0",
     "js-cookie": "^3.0.5",
+    "lib-flexible": "^0.3.2",
     "marked": "4.3.0",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
@@ -53,6 +54,7 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.15.1",
+    "less": "^4.2.0",
     "postcss": "^8.4.38",
     "postcss-loader": "^8.1.1",
     "sass": "^1.54.0",
